--- a/tp6.5/index.html
+++ b/tp6.5/index.html
@@ -44,7 +44,7 @@
     </div>
     <hr>
     <footer>
-        <p>© SFCV - <a href="mentions.g">Mentions légales</a></p>
+        <p>© SFCV - <a href="mentions.txt">Mentions légales</a></p>
         <p>L'abus d'alcool est dangereux pour la santé, à consommer avec modération</p>
     </footer>
 </body>
