--- a/tp6.5/produits.html
+++ b/tp6.5/produits.html
@@ -144,7 +144,7 @@
 
     <!-- FOOTER SECTION -->
     <footer>
-        <p>© SFCV - <a href="#">Mentions légales</a></p>
+        <p>© SFCV - <a href="mentions.txt">Mentions légales</a></p>
         <p>L'abus d'alcool est dangereux pour la santé, à consommer avec modération</p>
     </footer>
 
