--- a/tp6.5/services.html
+++ b/tp6.5/services.html
@@ -41,7 +41,7 @@
     </div>
     
     <footer>
-        <p>© SFCV - <a href="">Mentions légales</a></p>
+        <p>© SFCV - <a href="mentions.txt">Mentions légales</a></p>
         <p>L'abus d'alcool est dangereux pour la santé, à consommer avec modération.</p>
     </footer>
 </body>
