--- a/tp6.5/index.html
+++ b/tp6.5/index.html
@@ -35,10 +35,10 @@
             </p>
             <h2>Liens</h2>
             <p>
-                La passion du vin au féminin : <a href="">www.femvin.com</a>
+                La passion du vin au féminin : <a href="https://www.femivin.com/">www.femivin.com</a>
             </p>
             <p>
-                Vinosafe : <a href="">www.vinosafe.com</a>
+                Vinatis : <a href="https://www.vinatis.com/">www.vinatis.com</a>
             </p>
         </article>
     </div>
